--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ repository = "https://github.com/0xDuo/utxo-miden"
 [workspace.dependencies]
 anyhow = "1"
 clap = { version = "4.4", features = ["derive"] }
+miden-vm = { version = "0.7", features = ["concurrent"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 [workspace]
 resolver = "2"
