--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,3 +9,5 @@ repository.workspace = true
 [dependencies]
 anyhow.workspace = true
 clap.workspace = true
+serde.workspace = true
+serde_json.workspace = true
