--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,5 +9,7 @@ repository.workspace = true
 [dependencies]
 anyhow.workspace = true
 clap.workspace = true
+hex.workspace = true
+miden-vm.workspace = true
 serde.workspace = true
 serde_json.workspace = true
