--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ repository = "https://github.com/0xDuo/utxo-miden"
 anyhow = "1"
 clap = { version = "4.4", features = ["derive"] }
 hex = "0.4"
+miden-crypto = { version = "0.7", features = ["serde"] }
 miden-vm = { version = "0.7", features = ["concurrent"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+winter-utils = "0.6"
 
 [workspace]
 resolver = "2"
