--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,8 @@ repository.workspace = true
 anyhow.workspace = true
 clap.workspace = true
 hex.workspace = true
+miden-crypto.workspace = true
 miden-vm.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+winter-utils.workspace = true
