--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1"
 clap = { version = "4.4", features = ["derive"] }
 hex = "0.4"
 miden-crypto = { version = "0.7", features = ["serde"] }
+miden-stdlib = "0.6.0"
 miden-vm = { version = "0.7", features = ["concurrent"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
