--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,6 +11,7 @@ anyhow.workspace = true
 clap.workspace = true
 hex.workspace = true
 miden-crypto.workspace = true
+miden-stdlib.workspace = true
 miden-vm.workspace = true
 serde.workspace = true
 serde_json.workspace = true
