Implement custom advice provider; refactor input to prover

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,7 +10,9 @@ repository.workspace = true
 anyhow.workspace = true
 clap.workspace = true
 hex.workspace = true
+miden-core.workspace = true
 miden-crypto.workspace = true
+miden-processor.workspace = true
 miden-stdlib.workspace = true
 miden-vm.workspace = true
 serde.workspace = true
