--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ repository = "https://github.com/0xDuo/utxo-miden"
 anyhow = "1"
 clap = { version = "4.4", features = ["derive"] }
 hex = "0.4"
+miden-core = "0.7"
 miden-crypto = { version = "0.7", features = ["serde"] }
+miden-processor = "0.7"
 miden-stdlib = "0.6.0"
 miden-vm = { version = "0.7", features = ["concurrent"] }
 serde = { version = "1", features = ["derive"] }
